--- a/input.css
+++ b/input.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap');
+
+@theme {
+    --font-primary: "Space Grotesk", sans-serif;
+    --font-secondary: "Outfit", sans-serif;
+    --color-primary: #FC8474;
+    --color-secondary: #E56333;
+    --color-third: #001122;
+}
+
