feat: breakpoint 1920px on process

--- a/output.css
+++ b/output.css
@@ -382,6 +382,9 @@
     --color-primary: #FC8474;
     --color-secondary: #E56333;
     --color-third: #001122;
+    --breakpoint-3xl: 1920px;
+    --breakpoint-4xl: 2560px;
+    --breakpoint-5xl: 3840px;
   }
 }
 @layer base {
@@ -666,6 +669,15 @@
   }
   .container {
     width: 100%;
+    @media (width >= 1920px) {
+      max-width: 1920px;
+    }
+    @media (width >= 2560px) {
+      max-width: 2560px;
+    }
+    @media (width >= 3840px) {
+      max-width: 3840px;
+    }
     @media (width >= 40rem) {
       max-width: 40rem;
     }
@@ -684,6 +696,15 @@
   }
   .container\! {
     width: 100% !important;
+    @media (width >= 1920px) {
+      max-width: 1920px !important;
+    }
+    @media (width >= 2560px) {
+      max-width: 2560px !important;
+    }
+    @media (width >= 3840px) {
+      max-width: 3840px !important;
+    }
     @media (width >= 40rem) {
       max-width: 40rem !important;
     }
@@ -799,9 +820,6 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-\[20rem\] {
-    height: 20rem;
-  }
   .h-\[30rem\] {
     height: 30rem;
   }
@@ -840,6 +858,9 @@
   }
   .w-34 {
     width: calc(var(--spacing) * 34);
+  }
+  .w-40 {
+    width: calc(var(--spacing) * 40);
   }
   .w-52 {
     width: calc(var(--spacing) * 52);
@@ -1701,9 +1722,6 @@
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
-  .px-\[0\.8rem\] {
-    padding-inline: 0.8rem;
-  }
   .px-\[0\.9rem\] {
     padding-inline: 0.9rem;
   }
@@ -1718,6 +1736,9 @@
   }
   .py-\[0\.4rem\] {
     padding-block: 0.4rem;
+  }
+  .pt-14 {
+    padding-top: calc(var(--spacing) * 14);
   }
   .text-center {
     text-align: center;
@@ -1894,9 +1915,6 @@
   }
   .text-\[\#262E7B\] {
     color: #262E7B;
-  }
-  .text-\[\#001122\] {
-    color: #001122;
   }
   .text-primary {
     color: var(--color-primary);
@@ -2352,6 +2370,318 @@
   }
   .transform-view {
     transform-box: view-box;
+  }
+  .\33 xl\:text-4xl {
+    @media (width >= 1920px) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .\33 xl\:text-8xl {
+    @media (width >= 1920px) {
+      font-size: var(--text-8xl);
+      line-height: var(--tw-leading, var(--text-8xl--line-height));
+    }
+  }
+  .\33 xl\:text-9xl {
+    @media (width >= 1920px) {
+      font-size: var(--text-9xl);
+      line-height: var(--tw-leading, var(--text-9xl--line-height));
+    }
+  }
+  .\33 xl\:text-\[30rem\] {
+    @media (width >= 1920px) {
+      font-size: 30rem;
+    }
+  }
+  .\33 xl\:text-\[35rem\] {
+    @media (width >= 1920px) {
+      font-size: 35rem;
+    }
+  }
+  .sm\:-mt-\[9rem\] {
+    @media (width >= 40rem) {
+      margin-top: calc(9rem * -1);
+    }
+  }
+  .sm\:h-\[35rem\] {
+    @media (width >= 40rem) {
+      height: 35rem;
+    }
+  }
+  .sm\:w-10 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 10);
+    }
+  }
+  .sm\:w-18 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 18);
+    }
+  }
+  .sm\:w-32 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
+  .sm\:w-\[23rem\] {
+    @media (width >= 40rem) {
+      width: 23rem;
+    }
+  }
+  .sm\:gap-10 {
+    @media (width >= 40rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .sm\:p-10 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
+  .sm\:px-10 {
+    @media (width >= 40rem) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .sm\:text-2xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .sm\:text-5xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .sm\:text-6xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-6xl);
+      line-height: var(--tw-leading, var(--text-6xl--line-height));
+    }
+  }
+  .sm\:text-lg {
+    @media (width >= 40rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .sm\:text-xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .sm\:leading-\[2rem\] {
+    @media (width >= 40rem) {
+      --tw-leading: 2rem;
+      line-height: 2rem;
+    }
+  }
+  .\32 xl\:-mt-8 {
+    @media (width >= 96rem) {
+      margin-top: calc(var(--spacing) * -8);
+    }
+  }
+  .\32 xl\:mt-8 {
+    @media (width >= 96rem) {
+      margin-top: calc(var(--spacing) * 8);
+    }
+  }
+  .\32 xl\:w-14 {
+    @media (width >= 96rem) {
+      width: calc(var(--spacing) * 14);
+    }
+  }
+  .\32 xl\:w-32 {
+    @media (width >= 96rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
+  .\32 xl\:w-40 {
+    @media (width >= 96rem) {
+      width: calc(var(--spacing) * 40);
+    }
+  }
+  .\32 xl\:w-44 {
+    @media (width >= 96rem) {
+      width: calc(var(--spacing) * 44);
+    }
+  }
+  .\32 xl\:w-72 {
+    @media (width >= 96rem) {
+      width: calc(var(--spacing) * 72);
+    }
+  }
+  .\32 xl\:w-\[20rem\] {
+    @media (width >= 96rem) {
+      width: 20rem;
+    }
+  }
+  .\32 xl\:w-\[25rem\] {
+    @media (width >= 96rem) {
+      width: 25rem;
+    }
+  }
+  .\32 xl\:flex-row {
+    @media (width >= 96rem) {
+      flex-direction: row;
+    }
+  }
+  .\32 xl\:flex-nowrap {
+    @media (width >= 96rem) {
+      flex-wrap: nowrap;
+    }
+  }
+  .\32 xl\:gap-6 {
+    @media (width >= 96rem) {
+      gap: calc(var(--spacing) * 6);
+    }
+  }
+  .\32 xl\:gap-10 {
+    @media (width >= 96rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .\32 xl\:gap-16 {
+    @media (width >= 96rem) {
+      gap: calc(var(--spacing) * 16);
+    }
+  }
+  .\32 xl\:gap-\[1\.8rem\] {
+    @media (width >= 96rem) {
+      gap: 1.8rem;
+    }
+  }
+  .\32 xl\:self-start {
+    @media (width >= 96rem) {
+      align-self: flex-start;
+    }
+  }
+  .\32 xl\:p-14 {
+    @media (width >= 96rem) {
+      padding: calc(var(--spacing) * 14);
+    }
+  }
+  .\32 xl\:px-14 {
+    @media (width >= 96rem) {
+      padding-inline: calc(var(--spacing) * 14);
+    }
+  }
+  .\32 xl\:px-\[1\.5rem\] {
+    @media (width >= 96rem) {
+      padding-inline: 1.5rem;
+    }
+  }
+  .\32 xl\:px-\[2rem\] {
+    @media (width >= 96rem) {
+      padding-inline: 2rem;
+    }
+  }
+  .\32 xl\:py-\[0\.5rem\] {
+    @media (width >= 96rem) {
+      padding-block: 0.5rem;
+    }
+  }
+  .\32 xl\:py-\[1\.3rem\] {
+    @media (width >= 96rem) {
+      padding-block: 1.3rem;
+    }
+  }
+  .\32 xl\:pt-4 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 4);
+    }
+  }
+  .\32 xl\:pt-10 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 10);
+    }
+  }
+  .\32 xl\:pt-12 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 12);
+    }
+  }
+  .\32 xl\:pt-18 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 18);
+    }
+  }
+  .\32 xl\:pt-32 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 32);
+    }
+  }
+  .\32 xl\:pt-34 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 34);
+    }
+  }
+  .\32 xl\:pr-\[30rem\] {
+    @media (width >= 96rem) {
+      padding-right: 30rem;
+    }
+  }
+  .\32 xl\:pr-\[35rem\] {
+    @media (width >= 96rem) {
+      padding-right: 35rem;
+    }
+  }
+  .\32 xl\:pr-\[55rem\] {
+    @media (width >= 96rem) {
+      padding-right: 55rem;
+    }
+  }
+  .\32 xl\:text-2xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .\32 xl\:text-3xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .\32 xl\:text-4xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .\32 xl\:text-5xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .\32 xl\:text-7xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-7xl);
+      line-height: var(--tw-leading, var(--text-7xl--line-height));
+    }
+  }
+  .\32 xl\:text-8xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-8xl);
+      line-height: var(--tw-leading, var(--text-8xl--line-height));
+    }
+  }
+  .\32 xl\:text-xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .\32 xl\:leading-normal {
+    @media (width >= 96rem) {
+      --tw-leading: var(--leading-normal);
+      line-height: var(--leading-normal);
+    }
   }
 }
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap');
