--- a/input.css
+++ b/input.css
@@ -4,8 +4,13 @@
 @theme {
     --font-primary: "Space Grotesk", sans-serif;
     --font-secondary: "Outfit", sans-serif;
+
     --color-primary: #FC8474;
     --color-secondary: #E56333;
     --color-third: #001122;
+    
+    --breakpoint-3xl: 1920px;
+    --breakpoint-4xl: 2560px;
+    --breakpoint-5xl: 3840px;
 }
 
