--- a/output.css
+++ b/output.css
@@ -1737,6 +1737,12 @@
   .py-\[0\.4rem\] {
     padding-block: 0.4rem;
   }
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
+  }
+  .pt-8 {
+    padding-top: calc(var(--spacing) * 8);
+  }
   .pt-14 {
     padding-top: calc(var(--spacing) * 14);
   }
@@ -2371,32 +2377,31 @@
   .transform-view {
     transform-box: view-box;
   }
+  .\33 xl\:gap-12 {
+    @media (width >= 1920px) {
+      gap: calc(var(--spacing) * 12);
+    }
+  }
+  .\33 xl\:py-16 {
+    @media (width >= 1920px) {
+      padding-block: calc(var(--spacing) * 16);
+    }
+  }
+  .\33 xl\:pt-16 {
+    @media (width >= 1920px) {
+      padding-top: calc(var(--spacing) * 16);
+    }
+  }
   .\33 xl\:text-4xl {
     @media (width >= 1920px) {
       font-size: var(--text-4xl);
       line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
-  .\33 xl\:text-8xl {
-    @media (width >= 1920px) {
-      font-size: var(--text-8xl);
-      line-height: var(--tw-leading, var(--text-8xl--line-height));
-    }
-  }
   .\33 xl\:text-9xl {
     @media (width >= 1920px) {
       font-size: var(--text-9xl);
       line-height: var(--tw-leading, var(--text-9xl--line-height));
-    }
-  }
-  .\33 xl\:text-\[30rem\] {
-    @media (width >= 1920px) {
-      font-size: 30rem;
-    }
-  }
-  .\33 xl\:text-\[35rem\] {
-    @media (width >= 1920px) {
-      font-size: 35rem;
     }
   }
   .sm\:-mt-\[9rem\] {
@@ -2432,6 +2437,11 @@
   .sm\:gap-10 {
     @media (width >= 40rem) {
       gap: calc(var(--spacing) * 10);
+    }
+  }
+  .sm\:self-start {
+    @media (width >= 40rem) {
+      align-self: flex-start;
     }
   }
   .sm\:p-10 {
@@ -2488,6 +2498,11 @@
   .\32 xl\:mt-8 {
     @media (width >= 96rem) {
       margin-top: calc(var(--spacing) * 8);
+    }
+  }
+  .\32 xl\:h-auto {
+    @media (width >= 96rem) {
+      height: auto;
     }
   }
   .\32 xl\:w-14 {
@@ -2580,6 +2595,36 @@
       padding-inline: 2rem;
     }
   }
+  .\32 xl\:py-6 {
+    @media (width >= 96rem) {
+      padding-block: calc(var(--spacing) * 6);
+    }
+  }
+  .\32 xl\:py-8 {
+    @media (width >= 96rem) {
+      padding-block: calc(var(--spacing) * 8);
+    }
+  }
+  .\32 xl\:py-16 {
+    @media (width >= 96rem) {
+      padding-block: calc(var(--spacing) * 16);
+    }
+  }
+  .\32 xl\:py-20 {
+    @media (width >= 96rem) {
+      padding-block: calc(var(--spacing) * 20);
+    }
+  }
+  .\32 xl\:py-32 {
+    @media (width >= 96rem) {
+      padding-block: calc(var(--spacing) * 32);
+    }
+  }
+  .\32 xl\:py-64 {
+    @media (width >= 96rem) {
+      padding-block: calc(var(--spacing) * 64);
+    }
+  }
   .\32 xl\:py-\[0\.5rem\] {
     @media (width >= 96rem) {
       padding-block: 0.5rem;
@@ -2590,9 +2635,24 @@
       padding-block: 1.3rem;
     }
   }
+  .\32 xl\:pt-2 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 2);
+    }
+  }
   .\32 xl\:pt-4 {
     @media (width >= 96rem) {
       padding-top: calc(var(--spacing) * 4);
+    }
+  }
+  .\32 xl\:pt-6 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 6);
+    }
+  }
+  .\32 xl\:pt-8 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 8);
     }
   }
   .\32 xl\:pt-10 {
@@ -2603,6 +2663,11 @@
   .\32 xl\:pt-12 {
     @media (width >= 96rem) {
       padding-top: calc(var(--spacing) * 12);
+    }
+  }
+  .\32 xl\:pt-16 {
+    @media (width >= 96rem) {
+      padding-top: calc(var(--spacing) * 16);
     }
   }
   .\32 xl\:pt-18 {
@@ -2633,6 +2698,16 @@
   .\32 xl\:pr-\[55rem\] {
     @media (width >= 96rem) {
       padding-right: 55rem;
+    }
+  }
+  .\32 xl\:pb-16 {
+    @media (width >= 96rem) {
+      padding-bottom: calc(var(--spacing) * 16);
+    }
+  }
+  .\32 xl\:pb-32 {
+    @media (width >= 96rem) {
+      padding-bottom: calc(var(--spacing) * 32);
     }
   }
   .\32 xl\:text-2xl {
